--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-materialize": "^3.10.0",
     "typed.js": "^2.0.12"
   },
