--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react-materialize": "^3.10.0",
     "typed.js": "^2.0.12"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5"
+  }
 }
