--- a/projectsData/projects.json
+++ b/projectsData/projects.json
@@ -42,7 +42,8 @@
     "title": "PitchForce Winner",
     "Date": "2021",
     "link": "https://www.youtube.com/watch?v=wSGBW1UBBKM",
-    "titleLink": "https://pitch-force.com/"
+    "titleLink": "https://pitch-force.com/",
+    "coverPhoto": "/images/P_7_1.jpg"
   },
   {
     "description": "Under the visionary leadership of CEO Mohammed Kilany, Fanera emerges victorious as the winner of the esteemed Challenge 22 innovation competition hosted by the Supreme Committee for Delivery & Legacy (SC), the organizing body of the 2022 FIFA World Cup Qatar™. This prestigious award recognizes Fanera's exceptional contributions in providing innovative solutions that directly support Qatar's hosting of the FIFA World Cup™. Out of over 1,400 applications from Qatar and the MENA region, Fanera's groundbreaking approach to fan engagement and its commitment to revolutionizing the football experience stood out among the competition",
@@ -74,6 +75,7 @@
     "title": "YouthActionNet Fellow",
     "Date": "2010",
     "link": "https://www.youtube.com/watch?v=2x5wiEOjiZI",
-    "titleLink": "#"
+    "titleLink": "#",
+    "coverPhoto": "images/P_6_1.jpg"
   }
 ]
