--- a/projectsData/projects.json
+++ b/projectsData/projects.json
@@ -3,14 +3,15 @@
     "description": "Honored as one of the top 40 business leaders under the age of 40 in the MENA region by Business Elite Awards, a distinguished program that recognizes and connects the most successful and ambitious entrepreneurs worldwide. This prestigious accolade celebrates the remarkable achievements and entrepreneurial spirit of young leaders, showcasing their significant contributions to the business landscape",
     "orginization": "Business elite award",
     "images": [
-      "images/projects/P_1_3.JPG",
       "images/projects/P_1_1.JPG",
+      "images/projects/P_1_3.JPG",
       "images/projects/P_1_2.JPG"
     ],
     "title": "40 Under 40 Award",
     "Date": "2023",
     "link": "",
-    "titleLink": "https://businesseliteawards.com/40-under-40/"
+    "titleLink": "https://businesseliteawards.com/40-under-40/",
+    "coverPhoto": "images/projects/P_1_3.jpg"
   },
   {
     "description": "Celebrating the exceptional presentation skills of Mohammed Kilany, winner of the Best Pitch Sigma Award in Dubai. With his captivating delivery and compelling storytelling, Kilany outshined countless pitchers to emerge as the standout presenter among a sea of talent. His pitch for Fanera, the innovative social network app for football fans, resonated with the audience and demonstrated his expertise in capturing attention and conveying a compelling business vision",
@@ -23,7 +24,8 @@
     "title": "Best Pitch Sigma Award - Dubai",
     "Date": "2022",
     "link": "https://www.entrepreneur.com/en-ae/starting-a-business/startup-spotlight-uae-based-social-platform-fanera-is-all/432122",
-    "titleLink": "https://sigma.world/"
+    "titleLink": "https://sigma.world/",
+    "coverPhoto": "images/projects/P_2_3.jpg"
   },
   {
     "description": "Entrepreneur Magazine recognizes Mohamed Kilany, CEO of Fanera, for his passion and entrepreneurial spirit in transforming football fan engagement. The article highlights Fanera as a cutting-edge social platform designed 'for and by football fans,' connecting enthusiasts from around the world through an engaging and interactive experience. Kilany's leadership and dedication to bridging the gap between fans, amplifying their voices, and facilitating content creation have made Fanera a standout in the industry",
@@ -32,7 +34,8 @@
     "title": "Featured in Entrepreneur",
     "Date": "2022",
     "link": "https://www.entrepreneur.com/en-ae/starting-a-business/startup-spotlight-uae-based-social-platform-fanera-is-all/432122",
-    "titleLink": "https://www.entrepreneur.com/"
+    "titleLink": "https://www.entrepreneur.com/",
+    "coverPhoto": "images/projects/P_3_1.jfif"
   },
   {
     "description": "Fanera's CEO, Mohammed Kilany, triumphs at the highly competitive PitchForce event, leaving a lasting impression on top venture capitalists (VCs) and angel investors. Going head-to-head with leading-edge companies in the USA, Kilany delivered an exceptional pitch that garnered rave reviews and secured the coveted first place. Witness the power of Kilany's presentation as he showcased Fanera's groundbreaking approach to fan engagement and revolutionizing the football industry. This remarkable achievement highlights Kilany's expertise as a persuasive and captivating speaker",
@@ -56,16 +59,18 @@
     "title": "Wins Challenge 22, Propelling Innovation in the FIFA World Cup",
     "Date": "2020",
     "link": "https://essenceofqatar.com/2021/04/25/challenge-22-startups-fanera/",
-    "titleLink": "#"
+    "titleLink": "https://www.qatar2022.qa/",
+    "coverPhoto": "images/projects/P_4_1.jpg"
   },
   {
     "description": "Mohammed Al-Kilany, co-founder of Souktel, has been recognized as an Ashoka Fellow for his groundbreaking work in revolutionizing Middle Eastern job markets. With his social enterprise Souktel, Al-Kilany has harnessed the power of technology to connect marginalized job seekers with employment opportunities and training programs, breaking down barriers and creating a more inclusive labor market. As an Ashoka Fellow, Al-Kilany joins a prestigious global community of social entrepreneurs who have achieved systemic change in their regions. We congratulate Al-Kilany on this well-deserved recognition and celebrate his dedication to improving the lives of individuals and communities through innovative social entrepreneurship.",
     "orginization": "Ashoka",
-    "images": ["images/projects/P_5_1.JPG"],
+    "images": ["images/projects/P_5_2.JPG", "images/projects/P_5_1.JPG"],
     "title": "Recognized as Ashoka Fellow",
     "Date": "2014",
-    "link": "https://www.ashoka.org/en-aaw/fellow/mohammed-al-kilan",
-    "titleLink": "https://www.ashoka.org/"
+    "link": "https://www.ashoka.org/en-aaw/fellow/mohammed-al-kilany",
+    "titleLink": "https://www.ashoka.org/en-aaw/about-ashoka",
+    "coverPhoto": "images/projects/P_5_1.JPG"
   },
   {
     "description": "has been recognized as a YouthActionNet Fellow, a prestigious accolade granted to inspiring young leaders worldwide. Selected among 20 exceptional individuals in 2009, Al-Kilany stood as the sole representative from the Middle East, highlighting his dedication to social change. YouthActionNet, a flagship program of the International Youth Foundation (IYF), aims to amplify the impact of youth-led social ventures globally. With a network of over 2,100 young social entrepreneurs in 92 countries, the program provides advanced leadership training, coaching, mentoring, advocacy, and networking opportunities. Al-Kilany's recognition as a YouthActionNet Fellow showcases his remarkable commitment to empowering young leaders and driving positive transformation through social entrepreneurship",
@@ -75,7 +80,38 @@
     "title": "YouthActionNet Fellow",
     "Date": "2010",
     "link": "https://www.youtube.com/watch?v=2x5wiEOjiZI",
-    "titleLink": "#",
-    "coverPhoto": "images/P_6_1.jpg"
+    "titleLink": "https://iyfglobal.org/initiatives/youthactionnet",
+    "coverPhoto": "images/P_7_1.png"
+  },
+  {
+    "description": "co-founder of Souktel, has been honored as one of the top 20 Arab Innovators by Synergos. With a mission to address pressing societal challenges and empower communities, Synergos supports a network of social entrepreneurs across the Arab world. Through his groundbreaking work in leveraging mobile-phone technology, Mohammed has revolutionized the job market, connecting young graduates with employers and enabling international relief organizations to reach rural communities effectively. His innovative JobMatch technology allows job seekers and employers to connect via SMS messaging, providing accessible employment opportunities",
+    "orginization": "synergos",
+    "images": ["images/projects/P_8_1.jpg", "images/projects/P_8_2.jpg"],
+    "title": "Recognized as a Top Arab Innovator by Synergos",
+    "Date": "2009",
+    "link": "https://www.synergos.org/our-network/bio/mohammed-kt-zaid-al-kilany",
+    "titleLink": "https://www.synergos.org/",
+    "coverPhoto": "images/projects/P_8_1.jpg"
+  },
+  {
+    "description": "In 2011, Mohammed Kilany, CEO of Fanera, had the privilege of speaking at the esteemed Clinton Global Initiative (CGI) annual meeting. CGI brings together influential leaders from various sectors to address global challenges and drive impactful change. During the panel discussion, Mohammed emphasized the critical role of technology in bridging the gap and providing equal opportunities, particularly in marginalized areas. He highlighted the significance of empowering the younger generation with access to opportunities, showcasing how technology can create a fair and inclusive environment. Mohammed's insights and contributions at CGI have contributed to advancing access to opportunities for individuals worldwide",
+    "orginization": "clintonfoundation",
+    "images": ["images/projects/P_9_1.jpg", "images/projects/P_9_2.JPG"],
+    "title": "Global Clinton Initiative Speaker",
+    "Date": "2011",
+    "link": "https://www.clintonfoundation.org/programs/leadership-public-service/clinton-global-initiative/",
+    "titleLink": "https://www.clintonfoundation.org/programs/leadership-public-service/clinton-global-initiative/",
+    "coverPhoto": "images/projects/P_9_1.jpg"
+  },
+  {
+    "description": "In his inspiring TEDx talk, Mohammed Kilany challenged prevailing narratives about Palestine and highlighted the unexplored aspects of Palestinian life. He emphasized the pivotal role of education as a means to uplift individuals and the nation as a whole. Drawing from his own experience, Mohammed shared how he co-founded Souktel, an innovative SMS-based platform that bridges the gap between job seekers and employers. With over 12,000 job seekers and 350 employers in its network, Souktel has expanded its impact across multiple countries in the region. Through his TEDx speech, Mohammed showcased the transformative power of technology in empowering individuals and fostering positive change in marginalized communities.",
+    "orginization": "TEDx Deadsea",
+    "images": null,
+    "videoLink": "https://www.youtube.com/embed/dP5dAQdfxgQ",
+    "title": "Tedx Jordan speaker",
+    "Date": "2011",
+    "link": "https://youtu.be/dP5dAQdfxgQ",
+    "titleLink": "https://www.ted.com/tedx/events/1221",
+    "coverPhoto": "images/projects/P_10_1.jpg"
   }
 ]
