--- a/projectsData/projects.json
+++ b/projectsData/projects.json
@@ -113,5 +113,15 @@
     "link": "https://youtu.be/dP5dAQdfxgQ",
     "titleLink": "https://www.ted.com/tedx/events/1221",
     "coverPhoto": "images/projects/P_10_1.jpg"
+  },
+  {
+    "description": "In 2011, Mohammed Kilany, CEO of Fanera, had the privilege of speaking at the esteemed Clinton Global Initiative (CGI) annual meeting. CGI brings together influential leaders from various sectors to address global challenges and drive impactful change. During the panel discussion, Mohammed emphasized the critical role of technology in bridging the gap and providing equal opportunities, particularly in marginalized areas. He highlighted the significance of empowering the younger generation with access to opportunities, showcasing how technology can create a fair and inclusive environment. Mohammed's insights and contributions at CGI have contributed to advancing access to opportunities for individuals worldwide",
+    "orginization": "life",
+    "images": null,
+    "title": "A Collection of Memorable Moments",
+    "Date": "2020",
+    "link": "",
+    "titleLink": "",
+    "coverPhoto": "images/collection/10.jpg"
   }
 ]
