--- a/projectsData/projects.json
+++ b/projectsData/projects.json
@@ -11,7 +11,7 @@
     "Date": "2023",
     "link": "",
     "titleLink": "https://businesseliteawards.com/40-under-40/",
-    "coverPhoto": "images/projects/P_1_1.jpg"
+    "coverPhoto": "images/projects/P_1_1.JPG"
   },
   {
     "description": "Celebrating the exceptional presentation skills of Mohammed Kilany, winner of the Best Pitch Sigma Award in Dubai. With his captivating delivery and compelling storytelling, Kilany outshined countless pitchers to emerge as the standout presenter among a sea of talent. His pitch for Fanera, the innovative social network app for football fans, resonated with the audience and demonstrated his expertise in capturing attention and conveying a compelling business vision",
